--- a/home.html
+++ b/home.html
@@ -2,11 +2,11 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="es"> <!--<![endif]-->
 
 <head>
 <meta charset="utf-8">
-<meta name="description" content="">
+<meta name="description" content="Chofer Pro or choferpro is a good way to improve yourself in a spiritual way. Chofer pro will make you growth and you will found the correct way to live.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Rooky - Free App Landing page template for startup</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -24,7 +24,7 @@
 <!-- header section -->
 <section class="banner" role="banner">
   <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="#"><img src="images/logo.png" alt=""></a> 
+    <div class="header-content clearfix"> <a class="logo" href="#"><img src="images/logo.png" alt="choefer pro"></a> 
       <!-- navigation section  -->
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
@@ -41,12 +41,12 @@
   </header>
   <!-- banner text section-->
   <div id="banner" class="container">
-    <div class="col-md-5 col-sm-12"> <img class="banner-img img-responsive" src="images/app-screen.png"> </div>
+    <div class="col-md-5 col-sm-12"> <img class="banner-img img-responsive" src="images/app-screen.png" alt="choefer pro" > </div>
     <div class="col-md-7 col-sm-12">
       <div class="banner-text">
         <h1>Beautiful and Elegant App Landing Page for <span>Startup</span> business</h1>
         <p>Amazing, clean and modern landing page template for showcase your mobile application to the world. Best Start Up For Your New App. </p>
-        <div class="banner-btn"><a href="#"><img src="images/apple-store-btn.png"></a> <a href="#"><img src="images/google-store-btn.png"></a> </div>
+        <div class="banner-btn"><a href="#"><img src="images/apple-store-btn.png"></a> <a href="#"><img src="images/google-store-btn.png" alt="choefer pro"></a> </div>
       </div>
       <!-- banner text section--> 
       
@@ -110,7 +110,7 @@ src="http://www.youtube.com/embed/k32xyP3KuWE?autoplay=0" frameborder="0" allowf
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium demque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore </p>
         </div>
       </div>
-      <div class="col-md-4 col-sm-12 middle"> <img class="img-responsive" src="images/feature-mobile.png"> </div>
+      <div class="col-md-4 col-sm-12 middle"> <img class="img-responsive" src="images/feature-mobile.png" alt='Chofer pro'> </div>
       <div class="col-md-4 col-sm-12">
         <div class="features1-content right"> <span class="icon icon-speedometer"></span>
           <h4>Boost performance</h4>
@@ -141,7 +141,7 @@ src="http://www.youtube.com/embed/k32xyP3KuWE?autoplay=0" frameborder="0" allowf
           </ul>
         </div>
       </div>
-      <div class="col-md-6"> <img class="img-responsive" src="images/feature-screen2.png"> </div>
+      <div class="col-md-6"> <img class="img-responsive" src="images/feature-screen2.png" alt='ChoferPro'> </div>
     </div>
   </div>
 </section>
@@ -158,7 +158,7 @@ src="http://www.youtube.com/embed/k32xyP3KuWE?autoplay=0" frameborder="0" allowf
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
         </div>
       </div>
-      <div class="col-md-6"> <img class="img-responsive" src="images/feature-screen3.png"> </div>
+      <div class="col-md-6"> <img class="img-responsive" src="images/feature-screen3.png" alt='Chofer PRO'> </div>
     </div>
   </div>
 </section>
@@ -176,17 +176,17 @@ src="http://www.youtube.com/embed/k32xyP3KuWE?autoplay=0" frameborder="0" allowf
   </div>
   <!-- owl-carousel starts -->
   <div id="owl-demo" class="owl-carousel">
-    <div class="item"><img src="images/app-screen/screen1.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen2.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen3.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen4.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen5.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen6.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen7.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen2.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen5.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen1.jpg"></div>
-    <div class="item"><img src="images/app-screen/screen6.jpg"></div>
+    <div class="item"><img src="images/app-screen/screen1.jpg" alt='Chofer pro' ></div>
+    <div class="item"><img src="images/app-screen/screen2.jpg" alt='Chofer pro' ></div>
+    <div class="item"><img src="images/app-screen/screen3.jpg" alt='Chofer pro' ></div>
+    <div class="item"><img src="images/app-screen/screen4.jpg" alt='Chofer pro' ></div>
+    <div class="item"><img src="images/app-screen/screen5.jpg" alt="choefer pro" ></div>
+    <div class="item"><img src="images/app-screen/screen6.jpg" alt="choefer pro" ></div>
+    <div class="item"><img src="images/app-screen/screen7.jpg" alt="choefer pro" ></div>
+    <div class="item"><img src="images/app-screen/screen2.jpg" alt="choefer pro" ></div>
+    <div class="item"><img src="images/app-screen/screen5.jpg" alt="choefer pro" ></div>
+    <div class="item"><img src="images/app-screen/screen1.jpg" alt="choefer pro" ></div>
+    <div class="item"><img src="images/app-screen/screen6.jpg" alt="choefer pro" ></div>
   </div>
   <!-- owl-carousel starts --> 
 </section>
